crates/oak_db/src/tests/snapshots/oak_db__tests__file_diagnostics__diagnostic_inherited_shadow_names_every_differing_context.snap
---
source: crates/oak_db/src/tests/file_diagnostics.rs
expression: "render(\"w/c.R\", c_source, c.diagnostics(&db))"
---
info[inherited-shadow]: This `source` call has an ambiguous effect.
                        It resolves through package `base` when the file is sourced on its own, to a binding in `a.R` when sourced by `a.R`, and to package `shadowr` when sourced by `b.R`.
 --> w/c.R:1:1
  |
1 | source("d.R")
  | ^^^^^^^^^^^^^
