crates/oak_db/src/tests/snapshots/oak_db__tests__file_diagnostics__diagnostic_installed_package_silent.snap
---
source: crates/oak_db/src/tests/file_diagnostics.rs
expression: "render(\"a.R\", source, file.diagnostics(&db))"
---
a.R
(no diagnostics)
