crates/oak_db/src/tests/snapshots/oak_db__tests__file_diagnostics__diagnostic_lazy_shadow_interleaved.snap
---
source: crates/oak_db/src/tests/file_diagnostics.rs
expression: "render(\"a.R\", source, file.diagnostics(&db))"
---
info[ambiguous-effect]: Ambiguous reading of `with()`.
                        An assignment to `with` in an enclosing scope could run before this call and change what it does.
 --> a.R:1:17
  |
1 | f <- function() with(local({ x <- 1 }), { y <- 2 })
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
2 | local <- identity
3 | with <- identity
  | ---- could run before the call
info[ambiguous-effect]: Ambiguous reading of `local()`.
                        An assignment to `local` in an enclosing scope could run before this call and change what it does.
 --> a.R:1:22
  |
1 | f <- function() with(local({ x <- 1 }), { y <- 2 })
  |                      ^^^^^^^^^^^^^^^^^
2 | local <- identity
  | ----- could run before the call
