crates/oak_db/src/tests/snapshots/oak_db__tests__file_diagnostics__diagnostic_lazy_shadow_value_in_effect_argument.snap
---
source: crates/oak_db/src/tests/file_diagnostics.rs
expression: "render(\"a.R\", source, file.diagnostics(&db))"
---
info[ambiguous-callee-resolution]: Ambiguous reading of `c()`.
                                   An assignment to `c` in an enclosing scope could run before this call and change what it does.
 --> a.R:1:24
  |
1 | f <- function() source(c("helpers.R"))
  |                        ^^^^^^^^^^^^^^
2 | c <- identity
  | - could run before the call
