crates/oak_db/src/tests/snapshots/oak_db__tests__file_diagnostics__diagnostic_no_inherited_shadow_for_a_value_callee_in_ordinary_sourcing.snap
---
source: crates/oak_db/src/tests/file_diagnostics.rs
expression: "render(\"w/helpers.R\", helpers_source, helpers.diagnostics(&db))"
---
w/helpers.R
(no diagnostics)
